--- a/public/design/start_page_slider.html
+++ b/public/design/start_page_slider.html
@@ -29,7 +29,7 @@
 
 </head>
 <body>
-  <div class="bg_white">
+  <div class="">
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
     <header role="banner" id="top" class="navbav">
       <div class="container">
@@ -137,7 +137,7 @@
        </ol>
        <div class="carousel-inner">
          <div class="item active">
-           <img src="http://localhost:3000/assets/dummy/teaser_01.jpg" alt="First slide">
+           <img src="http://localhost:3000/assets/dummy/teaser_04.jpg" alt="First slide">
            <div class="container">
              <div class="carousel-caption">
                <h1>Example headline.</h1>
@@ -147,7 +147,7 @@
            </div>
          </div>
          <div class="item">
-           <img src="http://localhost:3000/assets/dummy/teaser_02.jpg" alt="Second slide">
+           <img src="http://localhost:3000/assets/dummy/teaser_05.jpg" alt="Second slide">
            <div class="container">
              <div class="carousel-caption">
                <h1>Another example headline.</h1>
@@ -157,7 +157,7 @@
            </div>
          </div>
          <div class="item">
-           <img src="http://localhost:3000/assets/dummy/teaser_03.jpg" alt="Third slide">
+           <img src="http://localhost:3000/assets/dummy/teaser_06.jpg" alt="Third slide">
            <div class="container">
              <div class="carousel-caption">
                <h1>One more for good measure.</h1>
@@ -167,15 +167,15 @@
            </div>
          </div>
        </div>
-       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><i class="foundicon-left-arrow2"></i></a>
+       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><i class="foundicon-right-arrow2"></i></a>
      </div><!-- /.carousel -->
 
+   
+  </div>
+  <div class="bg_image">
 
-
-
-
-    <div class="container margin_top" id="#content">
+    <div class="container " id="#content">
 
       <div class="row">
 
@@ -201,6 +201,12 @@
         </div>
 
       </div>
+    </div>
+
+  </div>
+  <div class="bg_white">
+
+    <div class="container">
 
       <div class="row">
 
@@ -303,6 +309,7 @@
                 </label>
               </div>
               <button class="btn btn-primary btn-sm" type="submit">Subscribe</button>
+              <button class="btn btn-success btn-sm" type="submit">Second Link</button>
             </form>
 
 
@@ -343,11 +350,11 @@
                 Rails Way".
                 &nbsp;&nbsp;
               </p>
-        
+
 
             </div>
             <div class="col-md-6 image">
-              <img alt="pic3" class="img-responsive" src="https://scrivito.com/assets/screen-bf24ce9c5e11c65bb07419f2cec6aabc.jpg">
+              <img alt="pic3" class="img-responsive" src="http://localhost:3000/assets/dummy/teaser_04.jpg">
             </div>
           </div>
           <div id="clients" class="tab-pane fade">
@@ -359,12 +366,12 @@
               </p>
             </div>
             <div class="col-md-6 image">
-              <img alt="pic3" class="img-responsive" src="https://scrivito.com/assets/screen-bf24ce9c5e11c65bb07419f2cec6aabc.jpg">
+              <img alt="pic3" class="img-responsive" src="http://localhost:3000/assets/dummy/teaser_05.jpg">
             </div>
           </div>
           <div id="cloud" class="tab-pane fade">
             <div class="col-md-6 image">
-              <img alt="pic4" class="img-responsive" src="https://scrivito.com/assets/screen-bf24ce9c5e11c65bb07419f2cec6aabc.jpg">
+              <img alt="pic4" class="img-responsive" src="http://localhost:3000/assets/dummy/teaser_06.jpg">
             </div>
             <div class="col-md-6 info">
               <h4>No installation required</h4>
@@ -398,41 +405,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="http://placehold.it/200x150" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/dummy/teaser_06.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://placehold.it/200x150" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/dummy/teaser_07.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://placehold.it/200x150" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/dummy/teaser_08.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://placehold.it/200x150" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/dummy/teaser_09.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="http://placehold.it/200x150" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/dummy/teaser_05.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://placehold.it/200x150" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/dummy/teaser_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
@@ -590,7 +597,7 @@
   </div>
 
 
-  <div class="bg_darkgrey footer">
+  <div class="bg_blue footer">
     <div class="container">
       <div class="row">
         <div class="col-md-10">
