--- a/public/design/start_page_slider.html
+++ b/public/design/start_page_slider.html
@@ -15,7 +15,6 @@
   <!-- javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
-  <script src="http://localhost:3000/assets/application/slick.min.js"></script>
 
 
   <!--[if lt IE 9]>
@@ -141,8 +140,10 @@
            <div class="container">
              <div class="carousel-caption">
                <h1>Example headline.</h1>
-               <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+               <div class="content">
+               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                 <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
+               </div>
              </div>
            </div>
          </div>
@@ -151,8 +152,10 @@
            <div class="container">
              <div class="carousel-caption">
                <h1>Another example headline.</h1>
+               <div class="content">
                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                 <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
+               </div>
              </div>
            </div>
          </div>
@@ -161,8 +164,10 @@
            <div class="container">
              <div class="carousel-caption">
                <h1>One more for good measure.</h1>
+               <div class="content">
                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                 <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
+               </div>
              </div>
            </div>
          </div>
@@ -171,7 +176,7 @@
        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><i class="foundicon-right-arrow2"></i></a>
      </div><!-- /.carousel -->
 
-   
+
   </div>
   <div class="bg_image">
 
@@ -607,11 +612,15 @@
             <li><a href="#">Copyright</a></li>
           </ul>
           <div class="social_icons">
-            <a class="social_facebook" href="#" title="facebook"></a>
-            <a class="social_google" href="#" title="google+"></a>
-            <a class="social_twitter" href="#" title="twitter"></a>
-            <a class="social_youtube" href="#" title="youtube"></a>
-            <a class="social_rss" href="#" title="rss"></a>
+            <a href="#"><i class="foundicon-facebook"></i></a>
+            <a href="#"><i class="foundicon-google-plus"></i></a>
+            <a href="#"><i class="foundicon-twitter"></i></a>
+            <a href="#"><i class="foundicon-pinterest"></i></a>
+            <a href="#"><i class="foundicon-linkedin"></i></a>
+            <a href="#"><i class="foundicon-youtube"></i></a>
+            <a href="#"><i class="foundicon-flickr"></i></a>
+            <a href="#"><i class="foundicon-slideshare"></i></a>
+            <a href="#"><i class="foundicon-rss"></i></a>
           </div>
         </div>
         <div class="col-md-2">
@@ -681,7 +690,6 @@
             {
               breakpoint: 768,
               settings: {
-                arrows: false,
                 dots: false,
                 slidesToShow: 4
               }
