misc page for icon_box + skills + video + list_icon

--- a/public/design/start_page_slider.html
+++ b/public/design/start_page_slider.html
@@ -241,7 +241,7 @@
               <p>Feed the Needy. Donation of IFCO  ...</p>
             </div>
           </div>
-          <a href="#" class="more_link"><i class="web_icon">&#xF002;</i>more news</a>
+          <a href="#" class="more_link"><i class="foundicon-right-arrow"></i>more news</a>
 
         </div>
 
@@ -464,7 +464,7 @@
       <div class="row">
 
               <h2>Foundation Icons - General</h2>
-              <ul class="icon_list">
+              <ul class="list-unstyled">
                 <li><i class="foundicon-settings"></i>foundicon-settings</li>
                 <li><i class="foundicon-heart"></i>foundicon-heart</li>
                 <li><i class="foundicon-star"></i>foundicon-star</li>
@@ -514,7 +514,7 @@
                 <li><i class="foundicon-search"></i>foundicon-search</li>
               </ul>
               <h2>Foundation Icons - General Enclosed</h2>
-              <ul class="icon_list">
+              <ul class="list-unstyled">
                 <li><i class="foundicon-settings2"></i>foundicon-settings2</li>
                 <li><i class="foundicon-heart2"></i>foundicon-heart2</li>
                 <li><i class="foundicon-star2"></i>foundicon-star2</li>
@@ -564,7 +564,7 @@
                 <li><i class="foundicon-search2"></i>foundicon-search2</li>
               </ul>
               <h2>Foundation Icons - Social</h2>
-              <ul class="icon_list">
+              <ul class="list-unstyled">
                 <li><i class="foundicon-thumb-up"></i>foundicon-thumb-up</li>
                 <li><i class="foundicon-thumb-down"></i>foundicon-thumb-down</li>
                 <li><i class="foundicon-rss"></i>foundicon-rss</li>
