--- a/public/design/result_page.html
+++ b/public/design/result_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge" /><![endif]-->
-  <title>scriv_uno - Startpage</title>
+  <title>scriv_uno - Search Results</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
   <link rel="apple-touch-icon-precomposed" href="../app/assets/images/apple-touch-icon-precomposed.png">
@@ -125,7 +125,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/dummy/teaser_04.jpg">
+      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-search"></i> search results for "testimonial"</h1>
       </div>
@@ -242,7 +242,7 @@
           </div>
 
           <div class="list_item">
-            <a class="square" href="#"><img src="http://localhost:3000/assets/dummy/teaser_05.jpg" alt=""></a>
+            <a class="square" href="#"><img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt=""></a>
             <div class="list_item_content">
               <h4><a href="#">Defense Commissary Agency Sees Environmental Launch of Lorem Reusabe Program</a></h4>
               <span class="meta">22.04.2014 - 121 kB</span>
@@ -253,7 +253,7 @@
           </div>
 
           <div class="list_item">
-            <a class="square" href="#"><img src="http://localhost:3000/assets/dummy/teaser_04.jpg" alt=""></a>
+            <a class="square" href="#"><img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt=""></a>
             <div class="list_item_content">
               <h4><a href="#">Defense Commissary Agency Sees Environmental Launch of Lorem Reusabe Program</a></h4>
               <span class="meta">22.04.2014 - 121 kB</span>
@@ -333,7 +333,7 @@
         <div class="col-md-4">
           <div class="blog_item short">
             <div class="blog_heading">
-              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/dummy/square_01.png">
+              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>The Lorem in the Attic</span></a></h4>
               </div>
@@ -349,7 +349,7 @@
 
           <div class="blog_item short">
             <div class="blog_heading">
-              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/dummy/square_01.png">
+              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>The Lorem Ipsum in the Attic</span></a></h4>
               </div>
@@ -363,7 +363,7 @@
         <div class="col-md-4">
           <div class="blog_item short">
             <div class="blog_heading">
-              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/dummy/square_01.png">
+              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>More is not better for Lorem Ipsum in the Attic</span></a></h4>
               </div>
