--- a/public/design/about_page.html
+++ b/public/design/about_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge" /><![endif]-->
-  <title>scriv_uno - Startpage</title>
+  <title>scriv_uno - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
   <link rel="apple-touch-icon-precomposed" href="../app/assets/images/apple-touch-icon-precomposed.png">
@@ -125,7 +125,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/dummy/teaser_03.jpg">
+      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_03.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-people"></i> abouts us</h1>
       </div>
@@ -172,7 +172,7 @@
 
             <div class="col-md-4">
               <div class="box_white">
-                <img alt="" src="http://localhost:3000/assets/dummy/square_01.png" class="img-responsive">
+                <img alt="" src="http://localhost:3000/assets/scriv-uno/square_01.png" class="img-responsive">
                 <div class="h3">Brit Doe</div>
                 <small>Chief Executive Officer</small>
                 <p>Roadstreet 7<br>
@@ -194,7 +194,7 @@
 
             <div class="col-md-4">
               <div class="box_grey">
-                <img alt="" src="http://localhost:3000/assets/dummy/square_01.png" class="img-responsive">
+                <img alt="" src="http://localhost:3000/assets/scriv-uno/square_01.png" class="img-responsive">
                 <div class="h3">Jones Doe</div>
                 <small>Chief Executive Officer</small>
                 <p>Roadstreet 7<br>
@@ -215,7 +215,7 @@
 
             <div class="col-md-4">
               <div class="box_white">
-                <img alt="" src="http://localhost:3000/assets/dummy/square_01.png" class="img-responsive">
+                <img alt="" src="http://localhost:3000/assets/scriv-uno/square_01.png" class="img-responsive">
                 <div class="h3">Jones Doe</div>
                 <small>Chief Executive Officer</small>
                 <p>Roadstreet 7<br>
@@ -437,41 +437,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_06.jpg" alt="" class="square">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_07.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_08.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_09.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_05.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_04.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
@@ -491,12 +491,12 @@
       <div class="row">
 
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/dummy/teaser_09.jpg">
+          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/dummy/teaser_10.jpg">
+          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
             <ul>
