--- a/public/design/gallery_page.html
+++ b/public/design/gallery_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge" /><![endif]-->
-  <title>scriv_uno - Startpage</title>
+  <title>scriv_uno - Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
   <link rel="apple-touch-icon-precomposed" href="../app/assets/images/apple-touch-icon-precomposed.png">
@@ -128,7 +128,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/dummy/teaser_10.jpg">
+      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-photo"></i> blueimp gallery</h1>
       </div>
@@ -155,48 +155,48 @@
           </ol>
           <p>Phasellus ullamcorper purus sed justo pretium laoreet. Sed nunc felis, mattis et elit vitae, pretium rutrum ipsum. Morbi eu orci ut leo feugiat luctus. Cras ultricies consectetur sem eu dapibus. In lacinia volutpat commodo. Nullam semper tempor odio, ac porta tellus luctus in. Ut consectetur, metus id scelerisque hendrerit, lorem odio commodo sapien, sed commodo mauris eros nec purus. Quisque in convallis ipsum. Mauris auctor tempor tellus, a semper ipsum vestibulum id. Etiam sit amet ligula quam.</p>
 
-          <img src="http://localhost:3000/assets/dummy/teaser_10.jpg" alt="Image 10" class="img-responsive margin_bottom">
+          <img src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg" alt="Image 10" class="img-responsive margin_bottom">
 
 
           <div class="headline"><h3>a simple small gallery</h3></div>
 
           <div class="row">
 
-            <a href="http://localhost:3000/assets/dummy/teaser_01.jpg" title="Image 01" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_01.jpg" alt="Image 01" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_01.jpg" title="Image 01" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_01.jpg" alt="Image 01" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
 
-            <a href="http://localhost:3000/assets/dummy/teaser_02.jpg" title="Image 02" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_02.jpg" alt="Image 02" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_02.jpg" title="Image 02" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_02.jpg" alt="Image 02" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_03.jpg" title="Image 03" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_03.jpg" alt="Image 03" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_03.jpg" title="Image 03" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_03.jpg" alt="Image 03" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_04.jpg" title="Image 04" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_04.jpg" alt="Image 04" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" title="Image 04" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="Image 04" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_05.jpg" title="Image 05" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_05.jpg" alt="Image 05" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" title="Image 05" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="Image 05" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_06.jpg" title="Image 06" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_06.jpg" alt="Image 06" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" title="Image 06" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="Image 06" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_07.jpg" title="Image 07" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_07.jpg" alt="Image 07" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" title="Image 07" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" alt="Image 07" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_08.jpg" title="Image 08" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_08.jpg" alt="Image 08" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" title="Image 08" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" alt="Image 08" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
-            <a href="http://localhost:3000/assets/dummy/teaser_09.jpg" title="Image 09" data-gallery>
-              <img src="http://localhost:3000/assets/dummy/teaser_09.jpg" alt="Image 09" class="img-responsive col-md-4 col-xs-6 margin_bottom">
+            <a href="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" title="Image 09" data-gallery>
+              <img src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" alt="Image 09" class="img-responsive col-md-4 col-xs-6 margin_bottom">
             </a>
 
           </div>
@@ -292,41 +292,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_06.jpg" alt="" class="square">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_07.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_08.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_09.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_05.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/dummy/teaser_04.jpg" alt="" class="img-responsive">
+  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
@@ -346,12 +346,12 @@
       <div class="row">
 
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/dummy/teaser_09.jpg">
+          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/dummy/teaser_10.jpg">
+          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
             <ul>
