fixing localhost:3000 links in static design files

--- a/public/design/blog_page.html
+++ b/public/design/blog_page.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../app/assets/images/favicon.png">
 
   <!-- stylesheets -->
-  <link rel="stylesheet" type="text/css" href="http://localhost:3000/assets/application.css">
+  <link rel="stylesheet" type="text/css" href="/assets/application.css">
 
   <!-- javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -125,7 +125,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_01.jpg">
+      <img alt="" src="/assets/scriv-uno/teaser_01.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-globe2"></i> my blog</h1>
       </div>
@@ -156,7 +156,7 @@
 
           <div class="blog_item">
             <div class="blog_heading">
-              <img src="http://localhost:3000/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
+              <img src="/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
 
               <div class="blog_heading_content">
                 <h3 class="h2"><a href=""><span>The Lorem Ipsum in the Attic</span></a></h3>
@@ -187,7 +187,7 @@
 
           <div class="blog_item">
             <div class="blog_heading">
-              <img src="http://localhost:3000/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
+              <img src="/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
 
               <div class="blog_heading_content">
                 <h3 class="h2"><a href=""><span>More is not better for Lorem Ipsum in the Attic</span></a></h3>
@@ -199,7 +199,7 @@
             <div class="blog_body">
               <p>
               	There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-                <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="" class="img-responsive">
+                <img src="/assets/scriv-uno/teaser_06.jpg" alt="" class="img-responsive">
               <p>
               	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words
               </p>
@@ -213,7 +213,7 @@
 
               <div class="blog_item">
                 <div class="blog_heading">
-                  <img src="http://localhost:3000/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
+                  <img src="/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
 
                   <div class="blog_heading_content">
                     <h3 class="h2"><a href=""><span>More is not better for Lorem Ipsum in the Attic</span></a></h3>
@@ -223,7 +223,7 @@
                 </div>
 
                 <div class="blog_body">
-                    <img src="http://localhost:3000/assets/scriv-uno/teaser_02.jpg" alt="" class="img-responsive">
+                    <img src="/assets/scriv-uno/teaser_02.jpg" alt="" class="img-responsive">
                   <p>
                   	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words
                   </p>
@@ -255,7 +255,7 @@
 
           <div class="blog_item short">
             <div class="blog_heading">
-              <img src="http://localhost:3000/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
+              <img src="/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>The Lorem in the Attic</span></a></h4>
               </div>
@@ -267,7 +267,7 @@
 
           <div class="blog_item short">
             <div class="blog_heading">
-              <img src="http://localhost:3000/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
+              <img src="/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>The Lorem Ipsum in the Attic</span></a></h4>
               </div>
@@ -280,7 +280,7 @@
 
           <div class="blog_item short">
             <div class="blog_heading">
-              <img src="http://localhost:3000/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
+              <img src="/assets/scriv-uno/square_01.png" class="blog_item_image" alt="Gravatar">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>More is not better for Lorem Ipsum in the Attic</span></a></h4>
               </div>
@@ -374,12 +374,12 @@
       <div class="row">
 
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg">
+          <img class="img-responsive" alt="" src="/assets/scriv-uno/teaser_09.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg">
+          <img class="img-responsive" alt="" src="/assets/scriv-uno/teaser_10.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
             <ul>
