--- a/public/design/misc_page.html
+++ b/public/design/misc_page.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../app/assets/images/favicon.png">
 
   <!-- stylesheets -->
-  <link rel="stylesheet" type="text/css" href="http://localhost:3000/assets/application.css">
+  <link rel="stylesheet" type="text/css" href="/assets/application.css">
 
   <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 
@@ -128,7 +128,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg">
+      <img alt="" src="/assets/scriv-uno/teaser_07.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-graph"></i> misc page</h1>
       </div>
@@ -278,7 +278,7 @@
 
               <div class="list_item">
                 <a href="#" class="rect">
-                  <img src="http://localhost:3000/assets/scriv-uno/teaser_02.jpg" alt="">
+                  <img src="/assets/scriv-uno/teaser_02.jpg" alt="">
                   <i class="foundicon-video"></i>
                 </a>
                 <div class="list_item_content">
@@ -290,7 +290,7 @@
 
               <div class="list_item">
                 <a href="#" class="rect">
-                  <img src="http://localhost:3000/assets/scriv-uno/teaser_03.jpg" alt="">
+                  <img src="/assets/scriv-uno/teaser_03.jpg" alt="">
                   <i class="foundicon-video"></i>
                 </a>
                 <div class="list_item_content">
@@ -444,41 +444,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
+  					    <img src="/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
@@ -498,12 +498,12 @@
       <div class="row">
 
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg">
+          <img class="img-responsive" alt="" src="/assets/scriv-uno/teaser_09.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg">
+          <img class="img-responsive" alt="" src="/assets/scriv-uno/teaser_10.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
             <ul>
