--- a/public/design/result_page.html
+++ b/public/design/result_page.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../app/assets/images/favicon.png">
 
   <!-- stylesheets -->
-  <link rel="stylesheet" type="text/css" href="http://localhost:3000/assets/application.css">
+  <link rel="stylesheet" type="text/css" href="/assets/application.css">
 
   <!-- javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -125,7 +125,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg">
+      <img alt="" src="/assets/scriv-uno/teaser_04.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-search"></i> search results for "testimonial"</h1>
       </div>
@@ -242,7 +242,7 @@
           </div>
 
           <div class="list_item">
-            <a class="square" href="#"><img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt=""></a>
+            <a class="square" href="#"><img src="/assets/scriv-uno/teaser_05.jpg" alt=""></a>
             <div class="list_item_content">
               <h4><a href="#">Defense Commissary Agency Sees Environmental Launch of Lorem Reusabe Program</a></h4>
               <span class="meta">22.04.2014 - 121 kB</span>
@@ -253,7 +253,7 @@
           </div>
 
           <div class="list_item">
-            <a class="square" href="#"><img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt=""></a>
+            <a class="square" href="#"><img src="/assets/scriv-uno/teaser_04.jpg" alt=""></a>
             <div class="list_item_content">
               <h4><a href="#">Defense Commissary Agency Sees Environmental Launch of Lorem Reusabe Program</a></h4>
               <span class="meta">22.04.2014 - 121 kB</span>
@@ -333,7 +333,7 @@
         <div class="col-md-4">
           <div class="blog_item short">
             <div class="blog_heading">
-              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
+              <img alt="Gravatar" class="blog_item_image" src="/assets/scriv-uno/square_01.png">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>The Lorem in the Attic</span></a></h4>
               </div>
@@ -349,7 +349,7 @@
 
           <div class="blog_item short">
             <div class="blog_heading">
-              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
+              <img alt="Gravatar" class="blog_item_image" src="/assets/scriv-uno/square_01.png">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>The Lorem Ipsum in the Attic</span></a></h4>
               </div>
@@ -363,7 +363,7 @@
         <div class="col-md-4">
           <div class="blog_item short">
             <div class="blog_heading">
-              <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
+              <img alt="Gravatar" class="blog_item_image" src="/assets/scriv-uno/square_01.png">
               <div class="blog_heading_content">
                 <h4 class="h3"><a href=""><span>More is not better for Lorem Ipsum in the Attic</span></a></h4>
               </div>
