--- a/public/design/content_page.html
+++ b/public/design/content_page.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../app/assets/images/favicon.png">
 
   <!-- stylesheets -->
-  <link rel="stylesheet" type="text/css" href="http://localhost:3000/assets/application.css">
+  <link rel="stylesheet" type="text/css" href="/assets/application.css">
 
   <!-- javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -125,7 +125,7 @@
 
 
     <div class="teaser small">
-      <img alt="" src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg">
+      <img alt="" src="/assets/scriv-uno/teaser_06.jpg">
       <div class="container">
         <h1 class="h1"><i class="foundicon-globe2"></i> my headline</h1>
       </div>
@@ -171,7 +171,7 @@
 
           <p>Phasellus ullamcorper purus sed justo pretium laoreet. Sed nunc felis, mattis et elit vitae, pretium rutrum ipsum. Morbi eu orci ut leo feugiat luctus. Cras ultricies consectetur sem eu dapibus. In lacinia volutpat commodo. Nullam semper tempor odio, ac porta tellus luctus in. Ut consectetur, metus id scelerisque hendrerit, lorem odio commodo sapien, sed commodo mauris eros nec purus. Quisque in convallis ipsum. Mauris auctor tempor tellus, a semper ipsum vestibulum id. Etiam sit amet ligula quam.</p>
 
-          <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
+          <img src="/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
 
           <p>Phasellus ullamcorper purus sed justo pretium laoreet. Sed nunc felis, mattis et elit vitae, pretium rutrum ipsum. Morbi eu orci ut leo feugiat luctus. Cras ultricies consectetur sem eu dapibus. In lacinia volutpat commodo. Nullam semper tempor odio, ac porta tellus luctus in. Ut consectetur, metus id scelerisque hendrerit, lorem odio commodo sapien, sed commodo mauris eros nec purus. Quisque in convallis ipsum. Mauris auctor tempor tellus, a semper ipsum vestibulum id. Etiam sit amet ligula quam.</p>
 
@@ -354,41 +354,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
+  					    <img src="/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
@@ -408,12 +408,12 @@
       <div class="row">
 
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg">
+          <img class="img-responsive" alt="" src="/assets/scriv-uno/teaser_09.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" alt="" src="http://localhost:3000/assets/scriv-uno/teaser_10.jpg">
+          <img class="img-responsive" alt="" src="/assets/scriv-uno/teaser_10.jpg">
           <h4 class="h3">Lorem Ipsum muss gut sein</h4>   <p>Aton tem eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, cra lisat. Lormor amesapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer  im ipsum dolor sit amte dor sita lorem doro am tusa lis Lormor ame
               </p>
             <ul>
