--- a/public/design/start_page_slider.html
+++ b/public/design/start_page_slider.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../app/assets/images/favicon.png">
 
   <!-- stylesheets -->
-  <link rel="stylesheet" type="text/css" href="http://localhost:3000/assets/application.css">
+  <link rel="stylesheet" type="text/css" href="/assets/application.css">
 
   <!-- javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -136,7 +136,7 @@
        </ol>
        <div class="carousel-inner">
          <div class="item active">
-           <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="First slide">
+           <img src="/assets/scriv-uno/teaser_04.jpg" alt="First slide">
            <div class="container">
              <div class="carousel-caption">
                <h1>Example headline.</h1>
@@ -148,7 +148,7 @@
            </div>
          </div>
          <div class="item">
-           <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="Second slide">
+           <img src="/assets/scriv-uno/teaser_05.jpg" alt="Second slide">
            <div class="container">
              <div class="carousel-caption">
                <h1>Another example headline.</h1>
@@ -160,7 +160,7 @@
            </div>
          </div>
          <div class="item">
-           <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="Third slide">
+           <img src="/assets/scriv-uno/teaser_06.jpg" alt="Third slide">
            <div class="container">
              <div class="carousel-caption">
                <h1>One more for good measure.</h1>
@@ -186,7 +186,7 @@
 
         <div class="col-md-6">
           <div class="list_item">
-            <a href="#"><img src="http://localhost:3000/assets/scriv-uno/dummy_square6.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/dummy_square6.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h3 class="h2"><a href="#">Focus Group 01</a></h3>
               <p>IFCOl im ipsum dolor sit amte dor sita lorem doro am tusa lisat. Lormor amet lorem  ipsum
@@ -196,7 +196,7 @@
         </div>
         <div class="col-md-6">
           <div class="list_item">
-            <a href="#"><img src="http://localhost:3000/assets/scriv-uno/dummy_square1.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/dummy_square1.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h3 class="h2"><a href="#">Focus Group 02</a></h3>
               <p>IFCOl im ipsum dolor sit amte dor sita lorem doro am tusa lisat. Lormor amet lorem  ipsum
@@ -218,7 +218,7 @@
         <div class="col-md-4">
           <div class="headline"><h3>latest news</h3></div>
           <div class="list_item">
-            <a href="#"><img src="http://localhost:3000/assets/scriv-uno/dummy_square4.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/dummy_square4.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h4><a href="#">United Fresh Marketplace ...</a></h4>
               <span class="meta">Chicago - 22. - 30.09.2014</span>
@@ -226,7 +226,7 @@
             </div>
           </div>
           <div class="list_item">
-            <a href="#"><img src="http://localhost:3000/assets/scriv-uno/dummy_square5.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/dummy_square5.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h4><a href="#">Defense Commissary Agency Sees Environmental and ...</a></h4>
               <span class="meta">22.04.2014</span>
@@ -234,7 +234,7 @@
             </div>
           </div>
           <div class="list_item">
-            <a href="#"><img src="http://localhost:3000/assets/scriv-uno/dummy_square6.jpg" alt="" class="square"></a>
+            <a href="#"><img src="/assets/scriv-uno/dummy_square6.jpg" alt="" class="square"></a>
             <div class="list_item_content">
               <h4><a href="#">IFCO Joins California Produce Growers to Help Ag Against</a></h4>
               <span class="meta">22.04.2014</span>
@@ -359,7 +359,7 @@
 
             </div>
             <div class="col-md-6 image">
-              <img alt="pic3" class="img-responsive" src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg">
+              <img alt="pic3" class="img-responsive" src="/assets/scriv-uno/teaser_04.jpg">
             </div>
           </div>
           <div id="clients" class="tab-pane fade">
@@ -371,12 +371,12 @@
               </p>
             </div>
             <div class="col-md-6 image">
-              <img alt="pic3" class="img-responsive" src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg">
+              <img alt="pic3" class="img-responsive" src="/assets/scriv-uno/teaser_05.jpg">
             </div>
           </div>
           <div id="cloud" class="tab-pane fade">
             <div class="col-md-6 image">
-              <img alt="pic4" class="img-responsive" src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg">
+              <img alt="pic4" class="img-responsive" src="/assets/scriv-uno/teaser_06.jpg">
             </div>
             <div class="col-md-6 info">
               <h4>No installation required</h4>
@@ -410,41 +410,41 @@
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
+  					    <img src="/assets/scriv-uno/teaser_06.jpg" alt="" class="square">
   					    <p class="h4">Lorem & Ipsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_07.jpg" alt="" class="img-responsive">
   					    <p class="h4">Dairy</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_08.jpg" alt="" class="img-responsive">
   					    <p class="h4">Meat & Lorem</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_09.jpg" alt="" class="img-responsive">
   					    <p class="h4">Very</p>
   					  </a>
   					</div>
             <div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_05.jpg" alt="" class="img-responsive">
   					    <p class="h4">Lorpsum</p>
   					  </a>
   					</div>
 
   					<div>
   					  <a href="#">
-  					    <img src="http://localhost:3000/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
+  					    <img src="/assets/scriv-uno/teaser_04.jpg" alt="" class="img-responsive">
   					    <p class="h4">Morem Pipsum </p>
   					  </a>
   					</div>
