fixing some asset paths

--- a/public/design/start_page_slider.html
+++ b/public/design/start_page_slider.html
@@ -6,8 +6,8 @@
   <title>scriv_uno - Startpage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
-  <link rel="apple-touch-icon-precomposed" href="../app/assets/images/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="../app/assets/images/favicon.png">
+  <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png">
+  <link rel="shortcut icon" href="/assets/images/favicon.png">
 
   <!-- stylesheets -->
   <link rel="stylesheet" type="text/css" href="/assets/application.css">
